# invent

./: .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS  CARE_OF_COMMUNITY.md  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  index.html  index2.html  make.py  pypercard.py  pyproject.toml  requirements.txt  rtd_requirements.txt  setup.py  tests.html  todo.txt  webcam.md  widgets.json  zensical.toml
brand/: brand-articulation.md  design-brief.md
docs/: api.rst  authors.md  cheatsheet.md  cheatsheet.rst  code_of_conduct.md  conf.py  contributing.md  contributing.rst  conventions.md  design.md  design.rst  docstring_guide.md  ethos.md  index.md  index.rst  license.md  requirements.txt  setup.rst  tutorial1.md  tutorial1.rst  tutorial2.md  tutorial2.rst  tutorial3.md  tutorial3.rst  tutorial4.md  tutorial4.rst  tutorial5.md  tutorial5.rst  tutorials.md  tutorials.rst
docs/_static/: README.md
docs/javascript/: extra.js
docs/stylesheets/: extra.css
examples/: README.md  index.html
examples/adafruit_adventure/: adventure.py
examples/alchemyst/: andrea.html  index.html  main.py
examples/calculator/: README.md  index.html  main.py  pyscript.toml
examples/card_carousel/: index.html  main.py
examples/catfacts/: index.html  main.py
examples/chart_donkey/: main.py
examples/demo/: index.html  main.py  overlords.py  pyscript.toml  utils.py
examples/farmyard/: index.html  main.py  pyscript.toml
examples/hello/: index.html  main.py  pyscript.toml
examples/hello_interactive/: index.html  main.py
examples/loosey_goosey/: README.md  index.html  main.py  pyscript.toml
examples/name/: name.py
examples/open_cv_playground/: config.json  index.html  main.py
examples/temperature/: index.html  main.py  pyscript.toml  temperature.py
examples/theme_testcard/: config.json  dark-theme.css  index.html  index2.html  light-theme.css  main.py  theme.css
examples/turner/: README.md  index.html  main.py
media/: logo.xcf  splash.xcf
old/: AUTHORS.md  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  setup.py
old/docs/: code_of_conduct.rst  conf.py  contributing.rst  index.rst  license.rst  tutorial4.rst  tutorial5.rst  tutorial6.rst
old/examples/: README.md
old/pypercard/: __init__.py  colours.py
old/tests/: test_core.py  test_init.py  test_stack.json
pypercard/: .core.py.swp  __init__.py  colours.py  core.py  datastore.py  state_machine.py
src/: README.md  pyscript.toml
src/invent/: __about__.py  __init__.py  ai.py  app.py  channels.py  compatability.py  datastore.py  i18n.py  media.py  page.py  pubsub.py  speech.py  task.py  utils.py
static/: goose.html  goosey.py  main.py  mpy-settings.json  settings.json  widget_tests.py  widgets.html
tests/: __init__.py  conftest.py  test_app.py  test_channels.py  test_core.py  test_datastore.py  test_i18n.py  test_init.py  test_media.py  test_page.py  test_pubsub.py  test_pypercard.py  test_state_machine.py  test_task.py  test_utils.py
utils/: export_widgets.py  serve.py
(+424 files in other folders)
