[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypercard"
dynamic = ["version"]
authors = [
  { name="Nicholas H.Tollervey", email="ntoll@ntoll.org" },
]
description = "PyperCard - A Pythonic HyperCard for Beginner Programmers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: WebAssembly :: Emscripten",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Android",
    "Operating System :: iOS",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Software Distribution",
]

[project.urls]
"Homepage" = "https://github.com/pyscript/pypercard"
"Bug Tracker" = "https://github.com/pyscript/pypercard/issues"

[tool.hatch.version]
path = "src/pypercard/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pypercard"]
