[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invent"
dynamic = ["version"]
authors = [
  { name="Nicholas H.Tollervey", email="ntoll@ntoll.org" },
]
description = "Invent - an app framework for beginner programmers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: WebAssembly :: Emscripten",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Android",
    "Operating System :: iOS",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Software Distribution",
]

[project.urls]
"Homepage" = "https://github.com/invent-framework/invent"
"Bug Tracker" = "https://github.com/invent-framework/invent/issues"

[tool.hatch.version]
path = "src/invent/__about__.py"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/invent"
]

[tool.hatch.build.targets.wheel]
only-packages = true
packages = [
    "src/invent"
]
